--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<body>
 		<div>
 			<header>
+                <h1>this is a test</h1>
 			</header>
 			<main>
 				<img src="http://via.placeholder.com/225x225">
